Fix the Double Precision changes

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -5,9 +5,15 @@ PROG		= ar as aout ld nm ranlib size strip
 # Build a list of the host include directories.
 CPP             = $(shell gcc -print-prog-name=cc1)
 HOSTINC         = $(addprefix -I,$(shell echo | $(CPP) -v 2>&1 | grep '^ /.*include'))
-HOSTINC         += -I/usr/include/i386-linux-gnu
 
-CFLAGS		+= -nostdinc -g -Werror -Wall -DCROSS -I. $(HOSTINC) \
+# Add system include path
+ifeq (,$(wildcard /usr/include/i386-linux-gnu))
+    HOSTINC     += -I/usr/include
+else
+    HOSTINC     += -I/usr/include/i386-linux-gnu
+endif
+
+CFLAGS		+= -nostdinc -fno-builtin -g -Werror -Wall -DCROSS -I. $(HOSTINC) \
                    -I$(TOPSRC)/include -I$(TOPSRC)/src/cmd/ar \
                    -I$(TOPSRC)/src/cmd/as
 LDFLAGS         += -g
