--- a/src/libc/mips/sys/Makefile
+++ b/src/libc/mips/sys/Makefile
@@ -2,6 +2,7 @@ TOPSRC		= $(shell cd ../../../..; pwd)
 include $(TOPSRC)/target.mk
 
 ASFLAGS		+= ${DEFS}
+CFLAGS          += -Os
 
 # modules which can not use SYSCALL and must be assembled from sources.  The
 # rest of the system calls are generated with printf(1) and do not have
