--- a/src/games/sail/Makefile
+++ b/src/games/sail/Makefile
@@ -12,7 +12,7 @@ CFLAGS		+= -Os -mips16 -Werror -Wall
 OBJS            = main.o pl_main.o pl_1.o pl_2.o pl_3.o pl_4.o pl_5.o pl_6.o pl_7.o \
                   dr_main.o dr_1.o dr_2.o dr_3.o dr_4.o dr_5.o lo_main.o \
                   assorted.o game.o globals.o misc.o parties.o sync.o version.o doprnt.o
-LIBS            = -lcurses -ltermcap
+LIBS            = -lcurses -ltermcap -lc
 MAN		= sail.0
 MANSRC		= sail.6
 
