/bin/cc command modified to use SmallerC compiler by default (not LCC). For LCC, please use /bin/lcc instead.
I believe SmallerC is mature enough to try to use it as a primary compiler.
System include files might need some changes (ifdefs) to adapt.

--- a/src/cmd/cc/Makefile
+++ b/src/cmd/cc/Makefile
@@ -26,4 +26,4 @@ clean:
 install:        all
 		install cc $(DESTDIR)/bin/
 		install cc $(DESTDIR)/bin/scc
-		install cc $(DESTDIR)/bin/srcc
+		install cc $(DESTDIR)/bin/lcc
