Include files modified for compatibility with SmallerC. Fixed bug in C preprocessor: buffer size reduced to avoid allocation failure. Added option -v for smlrc. New example stdarg.c: a demo of function with variable arguments.

--- a/share/example/Makefile
+++ b/share/example/Makefile
@@ -1,5 +1,5 @@
 
-all:	ashello echo
+all:	ashello echo chello
 
 ashello: ashello.o
 	$(LD) ashello.o -o $@
@@ -11,4 +11,4 @@ echo:   echo.o
 	$(LD) $@.o -o $@
 
 clean:
-	rm -f *.o ashello echo *.dis *~
+	rm -f *.o ashello echo chello *.dis *~
