--- a/share/example/Makefile-host
+++ b/share/example/Makefile-host
@@ -5,13 +5,13 @@ CFLAGS		+= -Werror
 ASFLAGS		+= -DCROSS
 ASLDFLAGS       = --oformat=elf32-tradlittlemips -N -nostartfiles -T $(TOPSRC)/src/elf32-mips.ld
 
-all:            hello cplus
+all:            chello cplus echo stdarg
 
-hello:          hello.o
-		${CC} ${LDFLAGS} -o hello.elf hello.o ${LIBS}
-		${OBJDUMP} -S hello.elf > hello.dis
-		${SIZE} hello.elf
-		${ELF2AOUT} hello.elf $@
+chello:         chello.o
+		${CC} ${LDFLAGS} -o chello.elf chello.o ${LIBS}
+		${OBJDUMP} -S chello.elf > chello.dis
+		${SIZE} chello.elf
+		${ELF2AOUT} chello.elf $@
 
 cplus:          cplus.o
 		${CXX} ${LDFLAGS} -nostdlib -o cplus.elf cplus.o ${LIBS}
@@ -24,7 +24,6 @@ echo:           echo.o
 		${OBJDUMP} -S $@.elf > $@.dis
 		${SIZE} $@.elf
 		${ELF2AOUT} $@.elf $@
-		./aout $@ > $@.dis
 
 clean:
-		rm -f *.o *.elf ${MAN} hello cplus *.elf *.dis tags *~
+		rm -f *.o *.elf ${MAN} chello cplus echo stdarg *.elf *.dis tags *~
