--- a/src/games/boggle/Makefile
+++ b/src/games/boggle/Makefile
@@ -5,28 +5,36 @@
 #
 #	@(#)Makefile	5.3 (Berkeley) 9/7/85
 #
-DESTDIR=
-CC = /bin/cc
-SEPFLAG= -i
-CFLAGS = -O
+TOPSRC          = $(shell cd ../../..; pwd)
+include $(TOPSRC)/target.mk
+#include $(TOPSRC)/cross.mk
 
-all:	boggle bogdict
+CFLAGS  	+= -O
+OBJS    	= boggle.o
+MAN             = boggle.0
+MANSRC          = boggle.6
 
-bogdict: comp sfile
-	-if [ -f /usr/local/lib/w2a ]; \
-		then dict=/usr/local/lib/w2a; \
-		else dict=/usr/dict/words; fi; \
-	sed -f sfile $$dict | uniq | ./comp >bogdict
+all:            boggle bogdict ${MAN}
 
-install: all
-	install -s boggle ${DESTDIR}/usr/games/boggle
-	install -m 644 bogdict ${DESTDIR}/usr/games/lib/bogdict
+boggle:         ${OBJS}
+		$(CC) $(LDFLAGS) -o $@.elf $(OBJS) $(LIBS)
+		$(OBJDUMP) -S $@.elf > $@.dis
+		$(SIZE) $@.elf
+		$(ELF2AOUT) $@.elf $@ && rm $@.elf
 
-boggle: boggle.c
-	cc ${SEPFLAG} -o boggle ${CFLAGS} boggle.c
+bogdict:        comp sfile
+		sed -f sfile ../../../share/dict/words | uniq | ./comp > bogdict
 
-comp: comp.c
-	cc ${SEPFLAG} -o comp ${CFLAGS} comp.c
+comp:           comp.c
+		cc -O comp.c -o comp
+
+${MAN}:         ${MANSRC}
+		${MANROFF} $< > $@
 
 clean:
-	rm -f bogdict boggle comp *.o
+		rm -f *.o core boggle comp bogdict
+
+install:
+		install boggle $(DESTDIR)/games/
+		install -m 644 bogdict $(DESTDIR)/games/lib/bogdict
+		cp ${MAN} $(DESTDIR)/share/man/cat6/
