Update cpp to pcc 1.0.0's cpp
Update the preprocessor to fix some of its bugs.

--- a/src/cmd/cpp/Makefile
+++ b/src/cmd/cpp/Makefile
@@ -3,7 +3,7 @@ include $(TOPSRC)/target.mk
 #include $(TOPSRC)/cross.mk
 #CFLAGS          = -DCROSS
 
-OBJS            = cpp.o cpy.o token.o doprnt.o
+OBJS            = cpp.o cpy.o token.o compat.o doprnt.o
 MAN             = cpp.0
 MANSRC          = cpp.1
 
@@ -31,7 +31,7 @@ install:        all
 		install cpp $(DESTDIR)/bin/
 		cp cpp.0 $(DESTDIR)/share/man/cat1/
 
-cpp.o:          cpp.c y.tab.h
+cpp.o:          cpp.c cpp.h y.tab.h config.h
 
 .l.o:
 		$(LEX) $(LFLAGS) $<
@@ -62,3 +62,9 @@ test:
 		cmp tests/run9 tests/res9
 		./cpp < tests/test10 > tests/run10
 		cmp tests/run10 tests/res10
+		./cpp < tests/test11 > tests/run11
+		cmp tests/run11 tests/res11
+		./cpp < tests/test12 > tests/run12
+		cmp tests/run12 tests/res12
+		./cpp < tests/test13 > tests/run13
+		cmp tests/run13 tests/res13
