Fixed build and simulator configuration for Explorer1 board.

--- a/tools/virtualmips/Makefile
+++ b/tools/virtualmips/Makefile
@@ -6,6 +6,9 @@
 # chipKIT Max32
 CFLAGS		= -DSIM_PIC32 -DPIC32MX7 -DMAX32
 
+# Maximite
+#CFLAGS		= -DSIM_PIC32 -DPIC32MX7 -DMAXIMITE
+
 # Microchip Explorer 16
 #CFLAGS		= -DSIM_PIC32 -DPIC32MX7 -DEXPLORER16
 
