--- a/tools/virtualmips/pic32_explorer16.conf
+++ b/tools/virtualmips/pic32_explorer16.conf
@@ -16,14 +16,21 @@ flash_size          = 492               # kbytes
 flash_phy_address   = 0x1d000000
 flash_file_name     = ../../sys/pic32/explorer16/unix.bin
 
-start_address       = 0x9d001000        # user program
+#
+# Boot flash
+#
+boot_flash_size     = 12                # kbytes
+boot_flash_address  = 0x1fc00000
+boot_file_name     = ../../sys/pic32/explorer16/boot.bin
+
+start_address       = 0x9fc00000        # user program
 
 #
 # SD/MMC cards
 #
 sdcard_port         = 1                 # SPI1
-sdcard0_size        = 16                # Mbytes
-sdcard0_file_name   = ../../filesys.img
+sdcard0_size        = 340               # Mbytes
+sdcard0_file_name   = ../../sdcard.rd
 
 #
 # UARTs 1..6
