--- a/sys/pic32/Makefile
+++ b/sys/pic32/Makefile
@@ -4,8 +4,7 @@
 SUBDIR		= baremetal dip duinomite duinomite-uart duinomite-e \
                   duinomite-e-uart explorer16 max32 max32-eth maximite \
                   meb pinguino-micro starter-kit ubw32 ubw32-uart \
-                  ubw32-uart-sdram baremetal fubarino fubarino-uart \
-                  fubarino-uart-sramc mmb-mx7 maximite-color \
+                  ubw32-uart-sdram baremetal fubarino mmb-mx7 maximite-color \
                   32mxsdram-uart
 
 default:
@@ -20,4 +19,6 @@ clean:
 		find .. -name \*~ | xargs rm -f
 
 reconfig:
-		-for i in $(SUBDIR); do echo $$i; I=`echo $$i | awk '{print toupper($$0)}'`; (cd $$i; ../../../tools/configsys/config $$I); done
+		-for i in $(SUBDIR); do echo $$i; \
+                I=`echo $$i | awk '{print toupper($$0)}'`; \
+                (cd $$i; ../../../tools/configsys/config $$I); done
