Remove all hardcoded make commands, changing them to ${MAKE}. This is a first step towards being able to build RetroBSD on *BSD.

--- a/src/cmd/smux/Makefile
+++ b/src/cmd/smux/Makefile
@@ -1,10 +1,10 @@
 all:
-	make -C retro
-	make -C linux
+	${MAKE} -C retro
+	${MAKE} -C linux
 
 install:
-	make -C retro install
+	${MAKE} -C retro install
 
 clean:
-	make -C retro clean
-	make -C linux clean
+	${MAKE} -C retro clean
+	${MAKE} -C linux clean
