Moved aout sources to separate directory. Fsutil and modff license changed to BSD style.

--- a/src/cmd/Makefile
+++ b/src/cmd/Makefile
@@ -10,7 +10,7 @@ CFLAGS          += -Werror
 
 # Programs that live in subdirectories, and have makefiles of their own.
 # /bin
-SUBDIR		= adb adc-demo ar as awk basic cc chflags chpass \
+SUBDIR		= adb adc-demo aout ar as awk basic cc chflags chpass \
                   cpp dc diff emg env fdisk find forth fstat glcdtest \
                   hostname id la lcc lcpp ld ls login make man med \
                   more nm passwd picoc portio printf pwm \
