--- a/sys/pic32/Makefile
+++ b/sys/pic32/Makefile
@@ -5,7 +5,7 @@ SUBDIR		= baremetal dip duinomite duinomite-uart duinomite-e \
                   duinomite-e-uart explorer16 max32 max32-eth maximite \
                   meb pinguino-micro starter-kit ubw32 ubw32-uart \
                   ubw32-uart-sdram baremetal fubarino mmb-mx7 maximite-color \
-                  32mxsdram-uart
+                  32mxsdram-uart picadillo
 
 default:
 
