Fsutil: new option --scan to create manifest from directory contents.

--- a/tools/fsutil/Makefile
+++ b/tools/fsutil/Makefile
@@ -8,7 +8,7 @@ PROG		= fsutil
 #LIBS		= -largp
 
 # Fuse
-CFLAGS          += $(shell pkg-config fuse --cflags)
+MOUNT_CFLAGS    = $(shell pkg-config fuse --cflags)
 LIBS            += $(shell pkg-config fuse --libs)
 
 all:		$(PROG)
@@ -28,6 +28,9 @@ root.bin:       $(PROG)
 
 swap.bin:
 		dd bs=1k count=2048 < /dev/zero > $@
+
+mount.o: mount.c bsdfs.h
+		$(CC) $(CFLAGS) $(MOUNT_CFLAGS) -c -o $@ $<
 
 block.o: block.c bsdfs.h
 check.o: check.c bsdfs.h
