Ported robots game.

--- a/src/games/Makefile
+++ b/src/games/Makefile
@@ -12,8 +12,9 @@ CFLAGS          += -Werror -Wall -Os
 # Programs that live in subdirectories, and have makefiles of their own.
 #
 SUBDIR          = adventure atc backgammon battlestar boggle btlgammon \
-                  cribbage fortune hangman mille monop quiz rogue sail trek
-# TODO: robots snake
+                  cribbage fortune hangman mille monop quiz robots rogue \
+                  sail trek
+# TODO: snake
 
 # C programs that live in the current directory and do not need
 # explicit make lines.
