--- a/src/games/snake/Makefile
+++ b/src/games/snake/Makefile
@@ -8,7 +8,7 @@
 TOPSRC          = $(shell cd ../../..; pwd)
 include $(TOPSRC)/target.mk
 #include $(TOPSRC)/cross.mk
-#CFLAGS  	= -O -g -DCROSS -Dsgttyb=termios
+#CFLAGS  	= -O -g -DCROSS
 
 CFLAGS  	+= -Werror -Wall
 
