Fixed snake game.
Fixed newline bug in libcurses.

File /etc/termcap replaced by small version. Five TERM types supported:
ansi - simple generic display;
xterm - common for most modern terminal emulators;
linux - for Linux console;
cons25 - for BSD console;
vt100 - for DEC VT100 terminal emulators.

Terminal type xterm set by default.

--- a/src/libtermlib/termcap/Makefile
+++ b/src/libtermlib/termcap/Makefile
@@ -11,11 +11,12 @@
 #
 DESTDIR = ../../..
 
-termcap: reorder termcap.src
+termcap.full: reorder termcap.src
 	ex - termcap.src < reorder
 
-install: termcap
-	install -c -m 444 termcap ${DESTDIR}/etc/termcap
+install: termcap.small termcap.full
+	install -c -m 444 termcap.small ${DESTDIR}/etc/termcap
+	install -c -m 444 termcap.full ${DESTDIR}/etc/termcap.full
 
 tabset: FRC
 	rm -fr ${DESTDIR}/usr/share/tabset
@@ -24,6 +25,6 @@ tabset: FRC
 	install -c -m 444 tabset/* ${DESTDIR}/usr/share/tabset
 
 clean:
-	rm -f termcap
+	rm -f termcap.full
 
 FRC:
