--- a/src/games/btlgammon/Makefile
+++ b/src/games/btlgammon/Makefile
@@ -4,7 +4,7 @@ TOPSRC          = $(shell cd ../../..; pwd)
 include $(TOPSRC)/target.mk
 #include $(TOPSRC)/cross.mk
 
-CFLAGS  	= -O
+CFLAGS  	= -O -Wall -Werror
 OBJS    	= btlgammon.o
 
 all:            btlgammon
