--- a/tools/virtualmips/pic32_explorer16.conf
+++ b/tools/virtualmips/pic32_explorer16.conf
@@ -30,7 +30,7 @@ start_address       = 0x9fc00000        # user program
 #
 sdcard_port         = 1                 # SPI1
 sdcard0_size        = 340               # Mbytes
-sdcard0_file_name   = ../../sdcard.rd
+sdcard0_file_name   = ../../sdcard.img
 
 #
 # UARTs 1..6
