--- a/tools/virtualmips/pic32_maximite.conf
+++ b/tools/virtualmips/pic32_maximite.conf
@@ -23,7 +23,7 @@ start_address       = 0x9d006000        # user program
 #
 sdcard_port         = 4                 # SPI4
 sdcard0_size        = 340               # Mbytes
-sdcard0_file_name   = ../../filesys.img
+sdcard0_file_name   = ../../sdcard.img
 
 #
 # UARTs 1..6
