--- a/tools/virtualmips/pic32_ubw32.conf
+++ b/tools/virtualmips/pic32_ubw32.conf
@@ -23,7 +23,7 @@ start_address       = 0x9d006000        # user program
 #
 sdcard_port         = 1                 # SPI1
 sdcard0_size        = 340               # Mbytes
-sdcard0_file_name   = ../../filesys.img
+sdcard0_file_name   = ../../sdcard.img
 #sdcard1_size       = 2                 # Mbytes
 #sdcard1_file_name  = ../../home.img
 
